--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ewoks",
   "version": "0.1.0",
-  "homepage": "https://jacke99.github.io/",
+  "homepage": "https://jacke99.github.io/SWAPI-API",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
